yena
>>> number=10
>>> day="three"
>>> "I ate %d apples. so I was sick for %s days." %(number, day)
'I ate 10 apples. so I was sick for three days.'
>>> "I have %s apples" %3
'I have 3 apples'
>>> "rate is %s" % 3.234
'rate is 3.234'
>>> "Error is %d%%." %98
'Error is 98%.'
>>> "%10s" % "hi"
'        hi'
>>> "%-10sjane." % 'hi'
'hi        jane.'
>>> "%0.4f" % 3.42134234
'3.4213'
>>> "%10.4f" % 3.42134234
'    3.4213'
>>> "I eat {0} apples".format(3)
'I eat 3 apples'
>>> "I eat {0} apples".format("five")
'I eat five apples'
>>> number=3
>>> "I eat {0} apples". format(number)
'I eat 3 apples'
>>> number=10
>>> day="three"
>>> "I ate {0} apples. so I was sick for {1} days.".format(number,day)
'I ate 10 apples. so I was sick for three days.'
>>> "I ate {number} apples. so I was sick for {day} days." format(number=10, day=3)
  File "<stdin>", line 1
    "I ate {number} apples. so I was sick for {day} days." format(number=10, day=3)
                                                           ^^^^^^
SyntaxError: invalid syntax
>>> "I ate {0} apples. so I was sick for {day} days.".format(10,day=3)
'I ate 10 apples. so I was sick for 3 days.'
>>> "{0:<10}".format("hi")
'hi        '
>>> "{0:>10}".format("hi")
'        hi'
>>> "{0:^10}".format("hi")
'    hi    '
>>> "{0:=^10}".format("hi")
'====hi===='
>>> "{0:!<10}".format("hi")
'hi!!!!!!!!'
>>> y=3.42134234
>>> "{0:0.4f}".format(y)
'3.4213'
>>> "{0:10.4f}".format(y)
'    3.4213'
>>> "{{and}}".format()
'{and}'
>>> name="홍길동"
>>> age=30
>>> f'나의 이름은 {name}입니다. 나이는 {age}입니다.'
'나의 이름은 홍길동입니다. 나이는 30입니다.'
>>> age=30
>>> f'나는 내년이면 {age+1}살이 된다.'
'나는 내년이면 31살이 된다.'
>>> d={'name':'홍길동','age':30}
>>> f'나의 이름은 {d["name"]}입니다. 나이는 {d["age"]}입니다.'
'나의 이름은 홍길동입니다. 나이는 30입니다.'
>>> f'{"hi":<10}'
'hi        '
>>> f'{"hi":>10}'
'        hi'
>>> f'{"hi":^10}'
'    hi    '
>>> f'{"hi":=^10}'
'====hi===='
>>> f'{"hi":!<10}'
'hi!!!!!!!!'
>>> y=3.42134234
>>> f'{y:0.4f}'
'3.4213'
>>> f'{y:10.4f}'
'    3.4213'
>>> f'{{and}}'
'{and}'
>>> a="hobby"
>>> a.count('b')
2
>>> a="Python is the best choice"
>>> a.find('b')
14
>>> a.find('k')
-1
>>> a="Life is too short"
>>> a.index('t')
8
>>> a.index('k')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: substring not found
>>> ",".join('abcd')
'a,b,c,d'
>>> ",".join(['a','b','c','d'])
'a,b,c,d'
>>> a="hi"
>>> a.upper()
'HI'
>>> a.lower()
'hi'
>>> a="hi"
>>> a.lstrip()
'hi'
>>> a="   hi   "
>>> a.rstrip()
'   hi'
>>> a.strip()
'hi'
>>> a="Life is too short"
>>> a.replace("Life", "Your leg")
'Your leg is too short'
>>> a.split()
['Life', 'is', 'too', 'short']
>>> b="a:b:c:d"
>>> b.split(':')
['a', 'b', 'c', 'd']
